src/objects/Litigation_Constant__mdt.object
<CustomObject>
    <fields>
        <fullName>Litigation_Calculation_Offset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Litigation Calculation Offset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>International_Litigation</fullName>
                    <label>International Litigation</label>
                </value>
                <value>
                    <fullName>Remand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>String_Value__c</fullName>
        <label>String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_with_Field_Named__c</fullName>
        <label>Used with Field Named</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Litigation Constant</label>
    <pluralLabel>Litigation Constants</pluralLabel>
</CustomObject>